upload note.html and modified index.html

--- a/note.html
+++ b/note.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>个人主页</title>
+	<title>学习笔记</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
 	<style>
@@ -265,88 +265,76 @@
 		
 }
 </style>
-
 </head>
 <body>
 	<div class="container">
 		<header>
-			<h1>燕伤雪的个人主页</h1>
-			<p>职业：学生（或将成为灵活无业者）</p>
-			<p>专业技能：Java、Python、HTML/CSS、JavaScript、SQL</p>
-			<p>工作经验：暂无</p>
+			<h1>燕伤雪的学习笔记</h1>
+			<p>在这里，我将分享我在学习过程中所积累的知识和经验。</p>
 		</header>
 		<div class="nav">
-		
-			<a href="https://YanShangxue.github.io/index">首页</a>
+			<a href="index.html">首页</a>
 			<div class="nav-item">
-				<a href="note.html">学习笔记</a>
+				<a href="#about">学习笔记</a>
 				<div class="sub-nav">
-					<a href="#team">团队介绍</a>
-					<a href="#Front End">前端</a>
-					<a href="#Backend">后端</a>
-					<a href="#math">数学</a>
-					<a href="#AI">人工智能</a>
-					<a href="#Data Structures and Algorithms">数据结构与算法</a> 
-					<a href="#other ">其他</a>
+				  <a href="#team">团队介绍</a>
+				  <a href="#Front End">前端</a>
+				  <a href="#Backend">后端</a>
+				  <a href="#math">数学</a>
+				  <a href="#AI">人工智能</a>
+				  <a href="#Data Structures and Algorithms">数据结构与算法</a> 
+				  <a href="#other ">其他</a>
 				</div>
 			  </div>
-			<a href="#Project Presentation">项目展示</a>
-			<a href="#media">社交媒体</a>
-			<a href="#contact">联系方式</a>
+			<a href="#">项目展示</a>
+			<a href="#">社交媒体</a>
+			<a href="#">联系方式</a>
 		</div>
-		<section>
-			<h2>最新学习笔记</h2>
-			<p>以下是我的最新学习笔记，欢迎阅读！</p>
+		<section id="Front End">
+			<h2>前端</h2>
 			<ul>
 				<li><a href="#">如何使用github pages构建一个简单的个人博客（待编写）</a></li>
-				<li><a href="#">如何用c语言写一个斗地主发牌器（待编写）</a></li>
-				<li><a href="#">机器学习基本概念简介及其分类（待编写）</li>
-				<li><a href="#">java API学习笔记（待编写）</li>
-				<li><a href="#">Redis学习笔记（待编写）</a></li>
-				<li><a href="#">如何使用java结合Springboot在浏览器中实现增删查改（待编写）</a></li>	
-					
+				<li><a href="#">html和css学习笔记（待编写）</a></li>
+				<li><a href="#">......（待编写）</a>.</li>
 			</ul>
 		</section>
-		<section id="Project Presentation">
-			<h2 >项目展示</h2>
-			<p >以下是我参与的一些项目，欢迎查看！</p>
-			<div class="project">
-				<h3>个人静态网站</h3>
-				<p>该项目就是你现在在看的这个静态网站啦。</p>
-				<p>技术实现：github pages、html、css</p>
-				<p>项目地址：<a href="https://github.com/YanShangxue/YanShangxue.github.io">https://github.com/YanShangxue/YanShangxue.github.io</a></p>
-				<p>网站链接：<a href="https://YanShangxue.github.io">https://YanShangxue.github.io</a></p>
-			</div>
-			<div class="project">
-				<h3>网上书城系统</h3>
-				<p>该项目是一个基于Java的电子商务平台，使用Spring框架进行开发，实现了用户注册、商品展示、购物车、订单管理等功能。</p>
-				<p>技术实现：Java、Spring、MySQL、HTML/CSS、JavaScript</p>
-				<p>链接：<a href="#">暂未上线</a></p>
-			</div>
-		
-			<div class="project">
-				<h3>仙剑奇侠传静态网站</h3>
-				<p>该项目是一个介绍仙剑奇侠传系列游戏的静态网站，内容较为简陋</p>
-				<p>技术实现：jekyll、github pages、html、css、javascipt</p>
-				<p>项目地址：<a href="https://github.com/2021-web-08/2021-web-08.github.io">https://github.com/2021-web-08/2021-web-08.github.io</a></p>
-				<p>网站链接：<a href="https://2021-web-08.github.io">https://2021-web-08.github.io</a></p>
-			</div>
-		</section>
-		<section>
-			<h2 id="media">社交媒体</h2>
-			<p>除github外暂无公开的社交媒体账号</p>
-			<div class="social">
-				<a href="https://github.com/YanShangxue" >GitHub</a>
-			</div>
-			
-		</section>
-		<section id="contact" class="contact">
-			<h2>联系方式</h2>
-			<p>以下是我的联系方式，想要交流的朋友欢迎联系我！</p>
+		<section id="Backend">
+			<h2>后端</h2>
 			<ul>
-				<li><span>Email:</span> yanshangxue66@gmail.com</li>
+				<li><a href="#">Python基础知识</a></li>
+				<li><a href="#">Java核心概念</a></li>
+				<li><a href="#">数据库设计与优化</a></li>
 			</ul>
 		</section>
-	</div>
-</body>
-</html>
+		<section id="math">
+			<h2>数学</h2>
+			<ul>
+				<li><a href="#">机器学习基本概念</a></li>
+				<li><a href="#">深度学习入门</a></li>
+				<li><a href="#">自然语言处理技术</a></li>
+			</ul>
+		</section>
+		<section id="AI">
+			<h2>人工智能</h2>
+			<ul>
+				<li><a href="#">机器学习基本概念</a></li>
+				<li><a href="#">深度学习入门</a></li>
+				<li><a href="#">自然语言处理技术</a></li>
+			</ul>
+		</section>
+		<section id="Data Structures and Algorithms">
+			<h2>数据结构与算法</h2>
+			<ul>
+				<li><a href="#">机器学习基本概念（待编写）</a></li>
+				<li><a href="#">排序（待编写）</a></li>
+				<li><a href="#">......（待编写）</a></li>
+			</ul>
+		</section>
+		<section id="other">
+			<h2>其他</h2>
+			<ul>
+				<li><a href="#">如何用c语言写一个斗地主发牌器（待编写）</a></li>
+				<li><a href="#">软件工程方法论</a></li>
+				<li><a href="#">项目管理与团队协作</a></li>
+			</ul>
+		</section>
