--- a/note.html
+++ b/note.html
@@ -301,31 +301,31 @@
 		<section id="Backend">
 			<h2>后端</h2>
 			<ul>
-				<li><a href="#">Python基础知识</a></li>
-				<li><a href="#">Java核心概念</a></li>
-				<li><a href="#">数据库设计与优化</a></li>
+				<li><a href="#">Redis学习笔记（待编写）</a></li>
+				<li><a href="#">java API学习笔记（待编写）</a></li>
+				<li><a href="#">如何使用java结合Springboot在浏览器中实现增删查改（待编写）</a></li>
 			</ul>
 		</section>
 		<section id="math">
 			<h2>数学</h2>
 			<ul>
-				<li><a href="#">机器学习基本概念</a></li>
-				<li><a href="#">深度学习入门</a></li>
-				<li><a href="#">自然语言处理技术</a></li>
+				<li><a href="#">向量代数与空间解析几何(待编写)</a></li>
+				<li><a href="#">多元函数微分法及其应用(待编写)</a></li>
+				<li><a href="#">重积分及其应用(待编写)</a></li>
 			</ul>
 		</section>
 		<section id="AI">
 			<h2>人工智能</h2>
 			<ul>
-				<li><a href="#">机器学习基本概念</a></li>
-				<li><a href="#">深度学习入门</a></li>
-				<li><a href="#">自然语言处理技术</a></li>
+				<li><a href="#">机器学习基本概念(待编写)</a></li>
+				<li><a href="#">深度学习入门(待编写)</a></li>
+				<li><a href="#">自然语言处理技术(待编写)</a></li>
 			</ul>
 		</section>
 		<section id="Data Structures and Algorithms">
 			<h2>数据结构与算法</h2>
 			<ul>
-				<li><a href="#">机器学习基本概念（待编写）</a></li>
+				<li><a href="#">贪心法（待编写）</a></li>
 				<li><a href="#">排序（待编写）</a></li>
 				<li><a href="#">......（待编写）</a></li>
 			</ul>
@@ -334,7 +334,7 @@
 			<h2>其他</h2>
 			<ul>
 				<li><a href="#">如何用c语言写一个斗地主发牌器（待编写）</a></li>
-				<li><a href="#">软件工程方法论</a></li>
-				<li><a href="#">项目管理与团队协作</a></li>
+				<li><a href="#">计算机图形学（待编写）</a></li>
+				<li><a href="#">......（）</a></li>
 			</ul>
 		</section>
