编写学习笔记-机器学习基本概念，将笔记的样式提出为note.css

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 			<ul>
 				<li><a href="#">如何使用github pages构建一个简单的个人博客（待编写）</a></li>
 				<li><a href="#">如何用c语言写一个斗地主发牌器（待编写）</a></li>
-				<li><a href="#">机器学习基本概念简介及其分类（待编写）</li>
+				<li><a href="#">机器学习基本概念（待编写）</li>
 				<li><a href="#">java API学习笔记（待编写）</li>
 				<li><a href="#">Redis学习笔记（待编写）</a></li>
 				<li><a href="#">如何使用java结合Springboot在浏览器中实现增删查改（待编写）</a></li>	
