--- a/note.html
+++ b/note.html
@@ -4,267 +4,7 @@
 	<title>学习笔记</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
-	<style>
-		
-		body {
-			font-family: "Open Sans", sans-serif;
-			margin: 0;
-			padding: 0;
-			background-color: #f8f8f8;
-		}
-		.container {
-			max-width: 1000px;
-			margin: 0 auto;
-			padding: 20px;
-			display: flex;
-			flex-wrap: wrap;
-		}
-		header {
-			background-color: #333;
-			width: 1000px;
-			color: #fff;
-			padding: 20px;
-			text-align: center;
-			border-radius: 10px 10px 0 0;
-		}
-		h1 {
-			margin: 0;
-			font-size: 36px;
-			font-weight: 960;
-		}
-		p {
-			margin: 10px 0;
-			font-size: 18px;
-			line-height: 1.5;
-		}
-		.nav {
-			background-color: #fff;
-			padding: 20px;
-			text-align: center;
-			border-radius: 0 0 10px 10px;
-			box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-			flex-grow: 1;
-			display: flex;
-			flex-wrap: wrap;
-			justify-content: center;
-		}
-		.nav a {
-			text-decoration: none;
-			color: #333;
-			padding: 10px;
-			border: 1px solid #ccc;
-			margin: 5px;
-			font-weight: bold;
-			border-radius: 5px;
-			transition: all 0.3s ease;
-			display: flex
-		}
-		.nav a:hover {
-			background-color: #333;
-			color: #fff;
-		}
-		/* 二级导航栏样式 */
-		.sub-nav {
-			display: none;
-			background-color: #f1f1f1;
-			position: absolute;
-			z-index: 1;
-		}
-		
-		/* 二级导航栏链接样式 */
-		.sub-nav a {
-			display: inline-block;
-			color: black;
-			text-align: center;
-			padding: 5px 12px;
-			text-decoration: none;
-		}
-		
-		/* 二级导航栏链接鼠标悬停效果 */
-		.sub-nav a:hover {
-			background-color: #969696;
-		}
-		
-		/* 当鼠标悬停在.nav-item上时显示二级导航栏 */
-		.nav-item:hover .sub-nav {
-			display: block;
-		}
-		section {
-			margin: 20px;
-			padding: 20px;
-			background-color: #fff;
-			border-radius: 10px;
-			box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-			flex-grow: 1;
-			min-width: 300px;
-			max-width: 1000px;
-			flex-basis: calc(50% - 40px);
-		}
-		h2 {
-			font-size: 28px;
-			font-weight: 1000;
-			margin: 0;
-			margin-bottom: 20px;
-		}
-		h3 {
-			font-size: 20px;
-			font-weight: 1000;
-			margin: 0;
-			margin-bottom: 10px;
-		}
-		ul {
-			margin: 10px 0;
-			padding: 0;
-			list-style: none;
-			font-size: 18px;
-			line-height: 1.5;
-		}
-		li {
-			margin-bottom: 5px;
-			padding-left: 20px;
-			position: relative;
-		}
-		li:before {
-			content: "\2022";
-			position: absolute;
-		left: 0;
-		top: 2px;
-		color: #333;
-		font-size: 20px;
-		}
-		.project {
-		margin-bottom: 20px;
-		}
-		.project h3 {
-		font-size: 20px;
-		margin-bottom: 10px;
-		}
-		.project p {
-		font-size: 18px;
-		line-height: 1.5;
-		margin-bottom: 10px;
-		}
-		.project a {
-		
-		color: #333;
-		font-size: 18px;
-		margin-bottom: 10px;
-		transition: all 0.3s ease;
-		}
-		.project a:hover {
-		color: #007bff;
-		}
-		.social {
-		margin: 20px 0;
-		font-size: 20px;
-		line-height: 1.5;
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
-		}
-		.social a {
-		display: inline-block;
-		margin-right: 50px;
-		color: #e25a5a;
-		border-radius: 50%;
-		height: 50px;
-		min-width: 82px;
-		text-align: center;
-		line-height: 50px;
-		transition: all 0.3s ease;
-		}
-		.social a:hover {
-		background-color: #007bff;
-		color: #ffffff;
-		}
-		.contact ul {
-		margin: 10px 0;
-		padding: 0;
-		list-style: none;
-		font-size: 18px;
-		line-height: 1.5;
-		}
-		.contact li {
-		margin-bottom: 10px;
-		}
-		.contact li span {
-		font-weight: 1000;
-		margin-right: 10px;
-		display: inline-block;
-		width: 100px;
-		}
-		@media only screen and (max-width: 768px) {
-		header {
-		padding: 10px;
-		}
-		h1 {
-		font-size: 24px;
-		margin-bottom: 10px;
-		}
-		p {
-		font-size: 16px;
-		line-height: 1.2;
-		}
-		nav {
-		margin-top: 20px;
-		padding: 5px;
-		border-radius: 10px;
-		}
-		section {
-		margin: 10px;
-		padding: 10px;
-		}
-		h2 {
-		font-size: 24px;
-		margin-bottom: 10px;
-		}
-		h3 {
-		font-size: 18px;
-		margin-bottom: 5px;
-		}
-		ul {
-		font-size: 16px;
-		margin: 5px 0;
-		}
-		li {
-		margin-bottom: 3px;
-		}
-		li:before {
-		font-size: 16px;
-		}
-		.project h3 {
-		font-size: 18px;
-		margin-bottom: 5px;
-		}
-		.project p {
-		font-size: 16px;
-		line-height: 1.2;
-		margin-bottom: 5px;
-		}
-		.project a {
-		font-size: 16px;
-		margin-bottom: 5px;
-		}
-		.social {
-		margin: 10px 0;
-		padding: 10px;
-		}
-		.social a {
-		width: 40px;
-		height: 40px;
-		line-height: 40px;
-		}
-		.contact ul {
-		font-size: 16px;
-		margin: 5px 0;
-		}
-		.contact li span {
-		width: 80px;
-		}
-		
-		
-}
-</style>
+	<link rel="stylesheet" href="note.css">
 </head>
 <body>
 	<div class="container">
@@ -317,7 +57,7 @@
 		<section id="AI">
 			<h2>人工智能</h2>
 			<ul>
-				<li><a href="#">机器学习基本概念(待编写)</a></li>
+				<li><a href="机器学习基本概念.html">机器学习基本概念</a></li>
 				<li><a href="#">深度学习入门(待编写)</a></li>
 				<li><a href="#">自然语言处理技术(待编写)</a></li>
 			</ul>
