简单调整项目结构，修改机器学习基本概念笔记中的错误，编写并上传Java API学习笔记

--- a/note.html
+++ b/note.html
@@ -15,7 +15,7 @@
 		<div class="nav">
 			<a href="index.html">首页</a>
 			<div class="nav-item">
-				<a href="#about">学习笔记</a>
+				<a href="note.html">学习笔记</a>
 				<div class="sub-nav">
 				  <a href="#team">团队介绍</a>
 				  <a href="#Front End">前端</a>
@@ -42,7 +42,7 @@
 			<h2>后端</h2>
 			<ul>
 				<li><a href="#">Redis学习笔记（待编写）</a></li>
-				<li><a href="#">java API学习笔记（待编写）</a></li>
+				<li><a href="/notes/Java API.html">Java API学习笔记</a></li>
 				<li><a href="#">如何使用java结合Springboot在浏览器中实现增删查改（待编写）</a></li>
 			</ul>
 		</section>
@@ -57,7 +57,7 @@
 		<section id="AI">
 			<h2>人工智能</h2>
 			<ul>
-				<li><a href="机器学习基本概念.html">机器学习基本概念</a></li>
+				<li><a href="/notes/机器学习基本概念.html">机器学习基本概念</a></li>
 				<li><a href="#">深度学习入门(待编写)</a></li>
 				<li><a href="#">自然语言处理技术(待编写)</a></li>
 			</ul>
@@ -78,3 +78,6 @@
 				<li><a href="#">......（）</a></li>
 			</ul>
 		</section>
+	</div>
+</body>
+</html>
