优化了导航栏，更新主页笔记

--- a/index.html
+++ b/index.html
@@ -281,7 +281,6 @@
 			<div class="nav-item">
 				<a href="note.html">学习笔记</a>
 				<div class="sub-nav">
-					<a href="#team">团队介绍</a>
 					<a href="#Front End">前端</a>
 					<a href="#Backend">后端</a>
 					<a href="#math">数学</a>
@@ -298,10 +297,10 @@
 			<h2>最新学习笔记</h2>
 			<p>以下是我的最新学习笔记，欢迎阅读！</p>
 			<ul>
+				<li><a href="/notes/Java API.html">java API学习笔记</li>
+				<li><a href="/notes/机器学习基本概念.html">机器学习基本概念</li>
 				<li><a href="#">如何使用github pages构建一个简单的个人博客（待编写）</a></li>
 				<li><a href="#">如何用c语言写一个斗地主发牌器（待编写）</a></li>
-				<li><a href="#">机器学习基本概念（待编写）</li>
-				<li><a href="#">java API学习笔记（待编写）</li>
 				<li><a href="#">Redis学习笔记（待编写）</a></li>
 				<li><a href="#">如何使用java结合Springboot在浏览器中实现增删查改（待编写）</a></li>	
 					
