--- a/notes/Java API.html
+++ b/notes/Java API.html
@@ -14,9 +14,9 @@
 			<p>在这里，我将分享我在学习过程中所积累的知识和经验。</p>
 		</header>
 		<div class="nav">
-			<a href="index.html">首页</a>
+			<a href="/index.html">首页</a>
 			<div class="nav-item">
-				<a href="note.html">学习笔记</a>
+				<a href="/note.html">学习笔记</a>
 				<div class="sub-nav">
 				  <a href="#Front End">前端</a>
 				  <a href="#Backend">后端</a>
