调整图片样式，使图片大小适应屏幕大小

--- a/notes/机器学习基本概念.html
+++ b/notes/机器学习基本概念.html
@@ -87,7 +87,7 @@
 
 <p>例如，在做线性回归时，有坐标为x1,y1;x2,y2;x3,y3等多个点，就分别把x1,y1;x2,y2;x3,y3代入y=a*x+b中，然后把其他点坐标代入得到的回归方程中，对比哪个回归方程的整体的误差最小，则最终就选则该回归方程作为最优解。</p>
 
-<p><img src="/picture/一元线性回归.png" alt="图裂了"></p>
+<div class="image-container"><img src="/picture/一元线性回归.png" alt="图裂了"></div>
 
 <p>最小二乘法：计算整体的误差的大小时，我们通常不是直接把所有点的误差相加再比较，而是通过求误差的平方的平均值</p>
 
