--- a/note.html
+++ b/note.html
@@ -25,9 +25,9 @@
 				  <a href="#other ">其他</a>
 				</div>
 			  </div>
-			<a href="#">项目展示</a>
-			<a href="#">社交媒体</a>
-			<a href="#">联系方式</a>
+			  <a href="/index.html#Project Presentation">项目展示</a>
+			  <a href="/index.html#media">社交媒体</a>
+			  <a href="/index.html#contact">联系方式</a>
 		</div>
 		<section id="Front End">
 			<h2>前端</h2>
