编写并上传SSM基础

--- a/note.html
+++ b/note.html
@@ -42,7 +42,7 @@
 			<ul>
 				<li><a href="/notes/Redis学习笔记.html">Redis学习笔记</a></li>
 				<li><a href="/notes/Java API.html">Java API学习笔记</a></li>
-				<li><a href="#">如何使用java结合Springboot在浏览器中实现增删查改（待编写）</a></li>
+				<li><a href="/notes/SSM基础（实习总结）.html">SSM基础（实习总结）</a></li>
 			</ul>
 		</section>
 		<section id="math">
