--- a/notes/机器学习基本概念.html
+++ b/notes/机器学习基本概念.html
@@ -3,10 +3,10 @@
 
 <head>
 	<title>机器学习基本概念</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset='UTF-8'>
+	<meta name='viewport' content='width=device-width initial-scale=1'>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
 	<link rel="stylesheet" href="/note.css">
-
 </head>
 
 <body>
