再次修改SSM基础段落格式

--- a/notes/SSM基础（实习总结）.html
+++ b/notes/SSM基础（实习总结）.html
@@ -97,11 +97,13 @@
 				<li>ORM（Object Relational Mapping）框架，采用元数据来描述对象与关系映射的细节，元数据一般采用XML格式，并且存放在专门的对象一映射文件中。</li>
 
 			</ul>
-			<p>O R</p>
-			<p>Java mysql</p>
-			<p>类 表</p>
-			<p>变量 字段</p>
-			<p>对象 记录</p>
+			<pre>
+			O	R
+			Java	mysql
+			类	表
+			变量	字段
+			对象	记录
+			</pre>
 			<h4 id='42常用标签和属性'>4.2常用标签和属性</h4>
 			<p>标签</p>
 			<ul>
