--- a/notes/SSM基础（实习总结）.html
+++ b/notes/SSM基础（实习总结）.html
@@ -191,7 +191,9 @@
 				<li>继续跟随《基于SpringBoot和Mybatis的企业级文件上传与下载项目实战》进行学习，但登录转用户界面遇到bug长时间无法解决，又不想半途而废，故下载源码，修改配置文件和数据库内容，但上传时仍然报错（There
 					was an unexpected error (type=Internal Server Error, status=500).
 					java.io.FileNotFoundException:
-					C:\Users\usermanes\AppData\Local\Temp\tomcat.4399829314636208868.8901\work\Tomcat\localhost\files\Users\chenyannan\files\files\2022-10-21\202210210028599a90fb11870a43e795cb9b4c11e06e00.jpg
+					C:\Users\usermanes\AppData\Local\Temp\
+					tomcat.4399829314636208868.8901\work\Tomcat\localhost\
+					files\Users\chenyannan\files\files\2022-10-21\202210210028599a90fb11870a43e795cb9b4c11e06e00.jpg
 					(系统找不到指定的路径。)），由于前端基础太薄弱，就算看了很多解决方案也无法修改，故最终只能放弃该教程，转而寻找其他出路。</li>
 			</ul>
 			<h3 id='10月18日学习日记-2'>10月18日学习日记</h3>
