--- a/notes/SSM基础（实习总结）.html
+++ b/notes/SSM基础（实习总结）.html
@@ -105,46 +105,28 @@
 			对象	记录
 			</pre>
 			<h4 id='42常用标签和属性'>4.2常用标签和属性</h4>
-			<p>标签</p>
-			<ul>
-				<li>
-					<insert> 增添
-				</li>
-				<li>
-					<update> 修改
-				</li>
-				<li>
-					<delete> 删除
-				</li>
-				<li> 查找</li>
-				<li>
-					<resultMap> 映射
-				</li>
-				<li>
-					<id> 映射的唯一标识，主键字段的映射配置
-				</li>
-				<li>
-					<result> 结果映射的配置
-				</li>
-				<li>
-					<collection> 一对多
-				</li>
-				<li>
-					<association> 多对一
-				</li>
-
-			</ul>
-			<p>属性
-				<namespace> 接口路径
-					<id> 方法名
-						<resultMap> 结果映射（多表）
-							<parameterType> 参数类型（一个参数时）
-								<resultType> 结果类型（单表）
-									<property> 类中成员变量的名字
-										<column> 查询语句字段的名字
-											<javaType> 类型
-												<ofType> 集合泛型
-			</p>
+			<pre>标签	
+	&lt;insert&gt; 增添
+	&lt;update&gt; 修改
+	&lt;delete&gt; 删除
+	&lt;select&gt; 查找
+	&lt;resultMap&gt; 映射
+	&lt;id&gt; 映射的唯一标识，主键字段的映射配置
+	&lt;result&gt; 结果映射的配置
+	&lt;collection&gt; 一对多
+	&lt;association&gt; 多对一
+			</pre>
+			<pre>属性
+	&lt;namespace&gt; 接口路径
+	&lt;id&gt; 方法名
+	&lt;resultMap&gt; 结果映射（多表）
+	&lt;parameterType&gt; 参数类型（一个参数时）
+	&lt;resultType&gt; 结果类型（单表）
+	&lt;property&gt; 类中成员变量的名字
+	&lt;column&gt; 查询语句字段的名字
+	&lt;javaType&gt; 类型
+	&lt;ofType&gt; 集合泛型
+			</pre>
 			<h4 id='43mybatis获取参数值的两种方式和'>4.3、Mybatis获取参数值的两种方式：#{}和${}</h4>
 			<h5 id='431若mapper接口方法的参数为单个字面量类型'>4.3.1、若mapper接口方法的参数为单个字面量类型</h5>
 			<ul>
@@ -193,7 +175,8 @@
 					java.io.FileNotFoundException:
 					C:\Users\usermanes\AppData\Local\Temp\
 					tomcat.4399829314636208868.8901\work\Tomcat\localhost\
-					files\Users\chenyannan\files\files\2022-10-21\202210210028599a90fb11870a43e795cb9b4c11e06e00.jpg
+					files\Users\chenyannan\files\files\2022-10-21\
+					202210210028599a90fb11870a43e795cb9b4c11e06e00.jpg
 					(系统找不到指定的路径。)），由于前端基础太薄弱，就算看了很多解决方案也无法修改，故最终只能放弃该教程，转而寻找其他出路。</li>
 			</ul>
 			<h3 id='10月18日学习日记-2'>10月18日学习日记</h3>
