将java5层结构修改为图片

--- a/notes/SSM基础（实习总结）.html
+++ b/notes/SSM基础（实习总结）.html
@@ -35,15 +35,7 @@
 		<section>
 			<h2 id='一前期学习总结'>一、前期学习总结</h2>
 			<h3 id='1java项目的5层结构'>1、java项目的5层结构</h3>
-			<pre>
-	视图层			控制层     	 	业务层			数据层			企业信息系统层
-	View			Controller		Service			Dao    			 EIS
-	JavaScipt		Java		  	Java			Java			 SQL
-	JavaScipt		SpringMVC	 	Spring			Mybatis			 SQL	
-				Action控制器		Service接口		实体类    		数据表
-           	  	     	  		    ServiceImpl实现		Mapper接口
-            	  	  	 	 	 	 	  	        xml实现
-</pre>
+			<div class="image-container"><img src="/picture/java项目的5层结构.png" alt="啊，我裂开了"></div>
 			<ul>
 				<li>EIS层：数据的存储</li>
 				<li>DAO层：负责数据的增删改查（对象关系映射）</li>
@@ -173,10 +165,18 @@
 				<li>继续跟随《基于SpringBoot和Mybatis的企业级文件上传与下载项目实战》进行学习，但登录转用户界面遇到bug长时间无法解决，又不想半途而废，故下载源码，修改配置文件和数据库内容，但上传时仍然报错（There
 					was an unexpected error (type=Internal Server Error, status=500).
 					java.io.FileNotFoundException:
-					C:\Users\usermanes\AppData\Local\Temp\
-					tomcat.4399829314636208868.8901\work\Tomcat\localhost\
-					files\Users\chenyannan\files\files\2022-10-21\
-					202210210028599a90fb11870a43e795cb9b4c11e06e00.jpg
+					C:\Users\
+					usermanes\
+					AppData\
+					Local\
+					Temp\
+					tomcat.4399829314636208868.8901\
+					work\
+					Tomcat\localhost\
+					files\Users\chenyannan\
+					files\files\2022-10-21\
+					202210210028599a90fb11
+					870a43e795cb9b4c11e06e00.jpg
 					(系统找不到指定的路径。)），由于前端基础太薄弱，就算看了很多解决方案也无法修改，故最终只能放弃该教程，转而寻找其他出路。</li>
 			</ul>
 			<h3 id='10月18日学习日记-2'>10月18日学习日记</h3>
