添加新笔记超链接

--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
 				<li><a href="/notes/Java API.html">java API学习笔记</li>
 				<li><a href="/notes/机器学习基本概念.html">机器学习基本概念</li>
 				<li><a href="#">如何使用github pages构建一个简单的个人博客（待编写）</a></li>
-				<li><a href="#">如何用c语言写一个斗地主发牌器（待编写）</a></li>
-				<li><a href="#">Redis学习笔记（待编写）</a></li>
-				<li><a href="#">如何使用java结合Springboot在浏览器中实现增删查改（待编写）</a></li>	
+				<li><a href="/notes/SSM基础（实习总结）.html">SSM基础（实习总结）</a></li>
+				<li><a href="/notes/Redis学习笔记.html">Redis学习笔记</a></li>
+				<li><a href="/notes/html加css学习笔记.html">html和css学习笔记</a></li>	
 					
 			</ul>
 		</section>
