--- a/note.html
+++ b/note.html
@@ -33,7 +33,7 @@
 			<h2>前端</h2>
 			<ul>
 				<li><a href="#">如何使用github pages构建一个简单的个人博客（待编写）</a></li>
-				<li><a href="#">html和css学习笔记（待编写）</a></li>
+				<li><a href="/notes/html加css学习笔记.html">html和css学习笔记</a></li>
 				<li><a href="#">......（待编写）</a>.</li>
 			</ul>
 		</section>
