--- a/notes/html加css学习笔记.html
+++ b/notes/html加css学习笔记.html
@@ -31,7 +31,7 @@
 		<a href="/index.html#media">社交媒体</a>
 		<a href="/index.html#contact">联系方式</a>
 	</div>
-	<h1> 本文由于例子格式问题，样式容易出现错误，所以基本是篇废文，还是需要用typore看markdown源文件</h1>
+	<h1> 本文由于例子格式问题，样式容易出现错误，所以基本是篇废文，还是需要用typora看markdown源文件</h1>
 	<h2 id='html加css'>复习笔记(html加css)</h2>
 	<h3 id='1html复习'>1、html复习</h3>
 	<h4 id='11html简介'>1.1、html简介</h4>
