--- a/notes/html加css学习笔记.html
+++ b/notes/html加css学习笔记.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+	<div class="container"></div>
 	<header>
 		<h1>燕伤雪的学习笔记</h1>
 		<p>在这里，我将分享我在学习过程中所积累的知识和经验。</p>
@@ -31,6 +32,7 @@
 		<a href="/index.html#media">社交媒体</a>
 		<a href="/index.html#contact">联系方式</a>
 	</div>
+	<section>
 	<h1> 本文由于例子格式问题，样式容易出现错误，所以基本是篇废文，还是需要用typora看markdown源文件</h1>
 	<h2 id='html加css'>复习笔记(html加css)</h2>
 	<h3 id='1html复习'>1、html复习</h3>
@@ -465,7 +467,7 @@
 			border: 5px blue dotted;
 		}
 
-		</head></body>
+	
 	</style>
 
 	<body>
@@ -496,7 +498,7 @@
 			border: 1px solid red;
 		}
 
-		</body>
+	
 	</style>
 	<div class="class01">div 标签 class01</div>
 	<div class="class02">div 标签</div>
@@ -619,6 +621,8 @@
 
 	</ul>
 	<p>&nbsp;</p>
+</section>
+</div>
 </body>
 
 </html>
