--- a/notes/html加css学习笔记.html
+++ b/notes/html加css学习笔记.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div class="container"></div>
+	<div class="container">
 	<header>
 		<h1>燕伤雪的学习笔记</h1>
 		<p>在这里，我将分享我在学习过程中所积累的知识和经验。</p>
